# starbots_coffee_dispenser

./: README.md  foxglove_webapp.json  spawn_cup.sh
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/action/: DeliverCoffee.action
custom_msgs/msg/: DetectedObjects.msg  SegmentationResult.msg  Yolov11Inference.msg  Yolov11Segmentation.msg
custom_msgs/srv/: PickPlaceCup.srv
docker/: docker-compose.yaml  ros_entrypoint.sh  starbots-ros2-gazebo  starbots-ros2-manipulation
foxglove_webapp/: CMakeLists.txt  foxglove_webapp.json  package.xml
foxglove_webapp/launch/: start_foxglove.launch.xml
my_moveit_config/: .setup_assistant  package.xml
my_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  name.ros2_control.xacro  name.srdf  name.urdf.xacro  ompl_planning.yaml  ros2_controllers.yaml  sensors_3d.yaml  ur3e.ros2_control.xacro  ur3e.srdf  ur3e.urdf.xacro
my_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
object_detection/: README.md  package.xml  setup.py
object_detection/launch/: depth_to_points.launch.py  object_detection.launch.py
object_detection/object_detection/: __init__.py  geometry.py  object_detection.py  object_detection_node.py  pcl_qos_conv.py  perception_core.py  tracker.py  yolo_object_detection.py
object_detection/rviz/: config.rviz
object_manipulation/: CMakeLists.txt  package.xml
object_manipulation/bt_config/: deliver_coffee_tree.xml  deliver_cup_tree.xml
object_manipulation/include/bt_nodes/: goal_not_canceled_node.hpp  pick_node.hpp  place_node.hpp  prepick_node.hpp  preplace_node.hpp  putback_node.hpp  return_node.hpp  validate_detection_node.hpp
object_manipulation/include/object_manipulation/: bt_api.hpp  motion_executor.hpp  motion_policy.hpp  pick_and_place_runner.hpp  scoped_constraints.hpp  watch_guards.hpp
object_manipulation/launch/: deliver_coffee.launch.py  deliver_cup.launch.py  object_manipulation.launch.py
object_manipulation/src/: add_cafeteria_scene.cpp  add_coffee_scene.cpp  bt_main.cpp  deliver_cup_bridge.cpp  motion_executor.cpp  motion_policy.cpp  object_manipulation.cpp  pick_and_place_perception.cpp  watch_guards.cpp
object_manipulation/src/bt_nodes/: goal_not_canceled_node.cpp  pick_node.cpp  place_node.cpp  prepick_node.cpp  preplace_node.cpp  putback_node.cpp  return_node.cpp  validate_detection_node.cpp
pointcloud_filter/: CMakeLists.txt  README.md  package.xml
pointcloud_filter/src/: pointcloud_filter.cpp
sim_moveit_config/config/: name.srdf
universal_robot_ros2/Universal_Robots_ROS2_Description/urdf/: ur.urdf.xacro
universal_robot_ros2/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/config/: ur_controllers_rg2.yaml
universal_robot_ros2/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/launch/: test.launch.py  ur_sim_starbots.launch.py
universal_robot_ros2/barista_ros2/barista_alignment/scripts/: align_barista.py
universal_robot_ros2/barista_ros2/barista_description/launch/: spawn.launch.py
universal_robot_ros2/barista_ros2/barista_description/robot/: barista_mod.xacro
universal_robot_ros2/barista_ros2/barista_extra_models/models/bartender_dispenser/: model.sdf
universal_robot_ros2/barista_ros2/barista_extra_models/models/starbots_bartender_dispenser/: model.sdf
universal_robot_ros2/barista_ros2/barista_gazebo/launch/: barista_1.launch.py
universal_robot_ros2/rg2_gripper_description/urdf/: rg2_gripper.urdf.xacro
universal_robot_ros2/the_construct_office_gazebo/models/portable_cup_2/: model.sdf
universal_robot_ros2/the_construct_office_gazebo/models/portable_cup_2/meshes/: coffee.STL  coffee.dae
universal_robot_ros2/the_construct_office_gazebo/worlds/: starbots_complete.world
